@@ -9,6 +9,7 @@ aodh (2.0.0~b2-1) experimental; urgency=medium
   * New upstream release.
   * Fix where the alembic files are stored.
   * Fixed debian/copyright ordering.
+  * Fixed namespace for generating config file.
 
  -- Thomas Goirand <zigo@debian.org>  Thu, 14 Jan 2016 06:58:06 +0800
 
